<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="?attr/dialogShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_googleplay_white"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/rate_title"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageViewClose"
                    android:src="@drawable/ic_close_white"
                    android:layout_gravity="center_vertical"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </GridLayout>

            <TextView
                android:text="@string/rate_message"
                android:textSize="17sp"
                android:textColor="?attr/dialogShareTitle"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewNoThanks"
                    android:text="@string/rate_button_left"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textColor="@color/purple_500"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewLater"
                    android:text="@string/rate_button_center"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textColor="@color/purple_500"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewRateUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/selector_rate"
                    android:paddingLeft="20dp"
                    android:paddingTop="12dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="12dp"
                    android:text="@string/rate_button_right"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>