<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:background="?attr/favoriteDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:text="@string/create_folder"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="?attr/favoriteDialogTitle"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/imageViewClose"
                    android:src="@drawable/ic_close_dialog_favorite"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </GridLayout>

            <EditText
                android:id="@+id/editTextName"
                android:layout_marginTop="15dp"
                android:hint="@string/folder_name"
                android:textColorHint="?attr/favoriteDialogEditHintColor"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="?attr/favoriteDialogEditTextColor"
                android:background="@drawable/edittext_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <GridLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLeft"
                    android:layout_columnWeight="1"
                    android:text="@string/add"
                    android:textColor="?attr/favoriteDialogButtonLeftColor"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/button_folder_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonRight"
                    android:layout_columnWeight="1"
                    android:text="@string/cancel"
                    android:textColor="?attr/favoriteDialogButtonRightColor"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_folder_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>