<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:background="?attr/favoriteDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:text="@string/select_start_day"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="?attr/favoriteDialogTitle"
                android:layout_columnWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <GridLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLeft"
                    android:layout_columnWeight="1"
                    android:text="@string/save"
                    android:textColor="?attr/favoriteDialogButtonLeftColor"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/button_folder_green"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonRight"
                    android:layout_columnWeight="1"
                    android:text="@string/cancel"
                    android:textColor="?attr/favoriteDialogButtonRightColor"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_folder_gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>