<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient"
        android:paddingEnd="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_back_toolbar" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:background="@drawable/edittext_search"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:paddingStart="40dp"
                    android:paddingEnd="30dp"
                    android:textColor="?attr/mainToolbarSearchEditTextColor"
                    android:textColorHint="?attr/mainToolbarSearchEditTextHint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageViewClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_close_search"
                    android:visibility="invisible" />

            </FrameLayout>

        </GridLayout>

    </androidx.appcompat.widget.Toolbar>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <CheckBox
            android:id="@+id/checkBoxExact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:theme="@style/checkBoxStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/exact_phrase"
            android:textColor="?attr/mainToolbarTitle" />

        <CheckBox
            android:id="@+id/checkBoxPartial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:theme="@style/checkBoxStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/partial"
            android:textColor="?attr/mainToolbarTitle" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:id="@+id/relativeLayoutAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/all"
                android:textColor="?attr/mainToolbarTitle"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewAllBottom"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="?attr/mainToolbarTitle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutOt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ot"
                android:textAllCaps="true"
                android:textColor="?attr/mainToolbarTitle"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewOtBottom"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="?attr/mainToolbarTitle"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutNt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/nt"
                android:textAllCaps="true"
                android:textColor="?attr/mainToolbarTitle"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewNtBottom"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="?attr/mainToolbarTitle"
                android:visibility="invisible" />

        </RelativeLayout>

    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearLayoutResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/results"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSelectAll"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkBoxSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/searchCheckBox"
                android:minWidth="0dp"
                android:minHeight="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/select_all"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="/"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="?attr/searchResultText"
                android:textSize="17sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewClose"
            android:visibility="gone"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_close_search" />

        <ImageView
            android:id="@+id/imageViewCopy"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:visibility="gone"
            android:src="@drawable/ic_copy_search" />

        <ImageView
            android:id="@+id/imageViewShare"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_share_search" />

    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false" />

</LinearLayout>